fix: added media query to avoid grid distortion on zooming

--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,43 @@
-body {
-    display: flex;
-    flex-direction: column;
-    
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
+/*
+// Source - https://stackoverflow.com/a
+// Posted by Pztar
+// Retrieved 2025-12-09, License - CC BY-SA 3.0
+*/
 
-#container {
-    border: 2px solid black;
-    width: var(--grid-width);
-    height: var(--grid-height);
-}
+@media screen and (min-height: 750px) and (max-height: 800px){ 
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content:  center;
+        align-items: center;
+        height: 100vh;
+    }
 
-.inner {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-    width: var(--cell-width);
-    height: var(--cell-height);
-    background-color: var(--grid-color);
-}
+    #container {
+        flex-direction: column;
+        border: 2px solid black;
+        width: var(--grid-width);
+        height: var(--grid-height);
+    }
 
-.outer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .inner {
+        /*flex*/
+        display: flex;
+        width: var(--cell-width);
+        height: var(--cell-height);
+        background-color: var(--grid-color);
+        border: 1px solid red;
+    }
+
+    .outer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
